--- a/index2.html
+++ b/index2.html
@@ -3,3 +3,15 @@
 ​
 <html xmlns="http://www.w3.org/1999/xhtml">
 ​
+<head>
+	<title>	This is the second page </title>
+	<meta http-equiv="content-type"
+		content="text/html;charset=utf-8" />
+</head>
+​
+<body>
+<!--This is a comment. It won't show up in your browser, only in the page source-->
+	<p> Welcome to Yang's first website!</p>
+</body>
+​
+</html>
