--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-​
 <html xmlns="http://www.w3.org/1999/xhtml">
 
   <head>
@@ -14,7 +13,7 @@
   <p>Hi, this is Yang! You can reach me at ys57f@mail.missouri.edu</p>
 
 <a href="mailto:ys57f@mail.missouri.edu">
-  <img src="yang.jpg" alt="a picture of me" width="300px">
+  <img src="yang.jpg" alt="a picture of me" width="300px"/>
 </a>
 
 <p>Now time to know more about me!</p>
@@ -30,5 +29,6 @@
 
   <p>Click <a href="index2.html" target="_blank">here</a> to the next page.</p>
   <p>Back to <a href="https://www.google.com/" target="_blank">Google.</a></p>
+
 </body>
 </html>
