--- a/index.html
+++ b/index.html
@@ -7,30 +7,35 @@
 	<title>	This is my first website </title>
 	<meta http-equiv="content-type"
 		content="text/html;charset=utf-8" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 
 <body>
 <!--This is a comment. It won't show up in your browser, only in the page source-->
-	<p> Hi, this is Yang! You can reach me at ys57f@mail.missouri.edu</p>
-
+<div id="container">
+	<h1> Hi, this is Yang! You can reach me at ys57f@mail.missouri.edu</h1>
+<div id="main">
   <a href="mailto:ys57f@mail.missouri.edu">
     <img src="yang.jpg" alt="a picture of me" width="300px"/>
   </a>
 
   <p>Now time to know more about me!</p>
-    <ul>
+    <ul id="nav">
       <li><a href="https://syconvergence.wordpress.com/blog/" target="_blank">My blog posts</a></li>
       <li><a href="https://syconvergence.wordpress.com/photo/" target="_blank">My photo projects</a></li>
       <li><a href="https://syconvergence.wordpress.com/multimedia/" target="_blank">My multimedia projects</a></li>
     </ul>
+</div><!--end of main-->
 
+<div id="sidebar">
     <p>Now time for a joke!</p>
     <p>Q: Why are dogs such bad dancers?</p>
     <p>A: They have two left feet.</p>
 
     <p>Click <a href="index2.html" target="_blank">here</a> to the next page.</p>
     <p>Back to <a href="https://www.google.com/" target="_blank">Google.</a></p>
-    
+  </div><!--end of sidebar-->
+</div><!--end of container-->
 </body>
 
 </html>
