--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
     <p>Click <a href="index2.html" target="_blank">here</a> to the next page.</p>
     <p>Back to <a href="https://www.google.com/" target="_blank">Google.</a></p>
+    <p>Back to the <a href="original-index.html" target="_blank">original page</a>.</p>
   </div><!--end of sidebar-->
 </div><!--end of container-->
 </body>
